[package]
name = "calculator-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
num = "0.4.0"
thiserror = "1.0.40"
unicode-ident = "1.0.9"
