[package]
name = "calculator-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
calculator-core = { version = "0.1.0", path = "../calculator-core" }
wasm-bindgen = "0.2.86"
web-sys = "0.3.63"
gloo-timers = "0.2.6"
